overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,6 @@ header > ul > li > a{
 }
 
 .container{
-    width: 98.9vw;
     margin: 0;
     padding: 0;
     display: flex;
@@ -74,9 +73,9 @@ header > ul > li > a{
 }
 
 .intro{
-    width: 100%;
     height: 720px;
     margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -113,8 +112,9 @@ header > ul > li > a{
 }
 
 .about{
-    width: 100%;
     height: 370px;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -156,8 +156,9 @@ header > ul > li > a{
 }
 
 .service{
-    width: 100%;
     height: 720px;
+    margin: 0;
+    padding: 0;
     background-image: url(../img/service.svg);
     background-size:cover;
     background-repeat: no-repeat;
@@ -206,8 +207,9 @@ header > ul > li > a{
 }
 
 .contact{
-    width: 100%;
     height: 720px;
+    margin: 0;
+    padding: 0;
     background:#DEB70F;
 }
 
@@ -277,8 +279,9 @@ header > ul > li > a{
 }
 
 footer{
-    width: 100%;
     height: 545px;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
